--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,8 +21,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
+      - uses: actions/checkout@latest
+      - uses: actions/setup-go@latest
 
       - name: Install cut-cdn
         run: go install github.com/ImAyrix/cut-cdn@latest
@@ -31,13 +31,13 @@ jobs:
         run: sudo apt install curl
 
       - name: Get tif.txt
-        run: curl -o tif.txt https://github.com/hagezi/dns-blocklists/raw/main/ips/tif.txt
+        run: curl -O https://github.com/hagezi/dns-blocklists/raw/main/ips/tif.txt
 
       - name: Run cut-cdn
         run: cut-cdn -a -i ./tif.txt -o ./tifixed.txt
 
       - name: Git Auto Commit
-        uses: stefanzweifel/git-auto-commit-action@v4.16.0
+        uses: stefanzweifel/git-auto-commit-action@latest
         with:
           # Commit message
           commit_message: automatic/regular ip address updates
