--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,7 +6,7 @@ name: update
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   schedule: 
-    - cron: '0 */1 * * *'
+    - cron: '45 */1 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -35,7 +35,7 @@ jobs:
         run: curl -O https://raw.githubusercontent.com/hagezi/dns-blocklists/main/ips/tif.txt
 
       - name: Run cut-cdn
-        run: cut-cdn -i ./tif.txt -o ./tifixed.txt
+        run: cut-cdn -a -ua -i ./tif.txt -o ./tifixed.txt
 
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v5
